@@ -1,3 +1,8 @@
+2017-08-08  Martin Liska  <mliska@suse.cz>
+
+	PR tree-opt/81696
+	* gcc.dg/ipa/pr81696.c: New test.
+
 2017-08-08  Bin Cheng  <bin.cheng@arm.com>
 
 	PR tree-optimization/81744
